--- a/script-opts/modernz.conf
+++ b/script-opts/modernz.conf
@@ -1,6 +1,6 @@
 # Language and display
 # set language (for available options, see: https://github.com/Samillion/ModernZ/blob/main/docs/TRANSLATIONS.md)
-language=en
+language=ru
 # set icon theme. accepts fluent or material
 icon_theme=fluent
 # font for the OSC (default: mpv-osd-symbols or the one set in mpv.conf)
